infra/k8s/theia-service.yml
apiVersion: v1
kind: Service
metadata:
  name: theia-service
spec:
  selector:
    app: theia-deploy
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
