infra/k8s/theia-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: theia-global
    networking.gke.io/managed-certificates: managed-cert-ors
    kubernetes.io/ingress.class: "gce" # Updated annotation
spec:
  defaultBackend:
    service:
      name: theia-service
      port:
        number: 80
